Ensure text remains visible during webfont load

--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -4,6 +4,7 @@
        url('../fonts/gilroy-extrabold-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 :root {
